ingress-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pibbletv-ingress-api
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-server-name: "true"
    nginx.ingress.kubernetes.io/proxy-ssl-name: "local.pibbletv.com"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - local.pibbletv.com
      secretName: pibbletv-tls
  rules:
    - host: local.pibbletv.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8078
