ingress-auth.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pibbletv-ingress-auth
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-name: auth.167.99.36.185.nip.io
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - auth.167.99.36.185.nip.io
      secretName: pibbletv-tls-auth
  rules:
    - host: auth.167.99.36.185.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8443
