nginx-tcp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: local.pibbletv.com
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8078
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-tcp
                port:
                  number: 80
