pibbletv-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pibbletv-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - local.pibbletv.com
        - auth.pibbletv.com
      secretName: pibbletv-tls
  rules:
    - host: local.pibbletv.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8078
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80

    - host: auth.pibbletv.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8443
